# DL2026_Spring_FSD_Buslovich

./: .gitignore  QWEN.md  README.md  main.py  pyproject.toml
.specify/memory/: constitution.md
backend/: .env.example  pyproject.toml  ruff.toml
backend/src/: __init__.py  database.py  logger.py  main.py  seed_data.py
backend/src/api/: __init__.py  routes.py  schemas.py
backend/src/models/: __init__.py  answer.py  leaderboard.py  question.py  round.py  suggested_question.py
backend/src/services/: __init__.py  game.py  leaderboard.py  scoring.py
backend/src/utils/: __init__.py  validators.py
docs/: AI_REFLECTION.md  design.md
frontend/: .env.example  .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx  ErrorState.tsx  Feedback.tsx  GameHeader.tsx  GameMap.tsx  Leaderboard.tsx  Map.tsx  MapSkeleton.tsx  QuestionCard.tsx  QuestionCardSkeleton.tsx  Timer.tsx  __init__.ts
frontend/src/hooks/: useGame.ts
frontend/src/pages/: AdminPage.tsx  GamePage.tsx  HomePage.tsx  LeaderboardPage.tsx  SuggestPage.tsx
frontend/src/services/: __init__.ts  api.ts
frontend/src/types/: index.ts
specs/001-interactive-map-quiz/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-interactive-map-quiz/checklists/: comprehensive.md  requirements.md
specs/001-interactive-map-quiz/contracts/: api.md
